--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/studentservice
-spring.datasource.username=root
-spring.datasource.password=amanihdr
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=8081
+spring.datasource.url=jdbc:postgresql://dpg-d4inutnpm1nc73crbee0-a:5432/student_es69 
+spring.datasource.username=student_es69_user
+spring.datasource.password=omBsaDurmHQ70VHQXBiymmurFOPJPhak
+spring.jpa.hibernate.ddl-auto=update 
